<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomePageFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.loginapp.model.LoginViewModel" />
        <variable
            name="homeFragment"
            type="com.example.loginapp.HomePageFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/side_margin">

            <!-- Group the order details into a single ViewGroup and set focusable = true,
                 so all fields will be read aloud together by the accessibility service -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/welcome_home"
                    style="@style/TextAppearance.Cupcake.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_home"
                    android:layout_marginBottom="10dp"/>

                <View
                    android:id="@+id/divider0"
                    style="@style/Widget.Cupcake.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/side_margin"
                    android:layout_marginBottom="@dimen/side_margin" />

                <TextView
                    android:id="@+id/id_label"
                    style="@style/Widget.Cupcake.TextView.OrderSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_id"
                    android:textAllCaps="true"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/id"
                    style="@style/Widget.Cupcake.TextView.OrderSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/order_summary_margin"
                    android:text="@{viewModel.id}"
                    tools:text="uni613" />

                <View
                    android:id="@+id/divider1"
                    style="@style/Widget.Cupcake.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/side_margin"
                    android:layout_marginBottom="@dimen/side_margin" />

                <TextView
                    android:id="@+id/email_label"
                    style="@style/Widget.Cupcake.TextView.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_email_address" />

                <TextView
                    android:id="@+id/email"
                    style="@style/Widget.Cupcake.TextView.OrderSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/order_summary_margin"
                    android:text="@{viewModel.email}"
                    tools:text="uni613@naver.com" />

                <View
                    android:id="@+id/divider2"
                    style="@style/Widget.Cupcake.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/side_margin"
                    android:layout_marginBottom="@dimen/side_margin" />

                <View
                    android:id="@+id/divider3"
                    style="@style/Widget.Cupcake.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/side_margin"
                    android:layout_marginBottom="@dimen/margin_between_elements" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>